# advent-of-code

./: .gitignore
2018_python/: pyproject.toml
2018_python/solutions/day1/: part1.py  part2.py
2018_python/solutions/day2/: part1.py  part2.py
2018_python/solutions/day3/: part1.py  part2.py
2018_python/solutions/day4/: part1.py  part2.py
2018_python/solutions/day5/: part1.py  part2.py
2019_cpp/: .gitignore  CMakeLists.txt  day3
2019_cpp/exe/: d1p1  d1p2  d2p1  d2p2
2019_cpp/helpers/: print_sequences.h  read_input.h
2019_cpp/solutions/day1/: part1.cpp  part2.cpp
2019_cpp/solutions/day2/: part1.cpp  part2.cpp
2019_cpp/solutions/day3/: day3.cpp
2019_cpp/solutions/sandbox/: cpp_version_check.cpp
2019_python/: pyproject.toml
2019_python/solutions/day1/: part1.py  part2.py
2019_python/solutions/day10/: part1.py  part2.py  test_dayM.py
2019_python/solutions/day11/: part1.py  part2.py  scratch.txt
2019_python/solutions/day12/: part1.py  part2.py  setup.py  update.c  update.py  update.pyx
2019_python/solutions/day13/: input.txt  part1.py  part2.py
2019_python/solutions/day14/: part1.py  part2.py  test_day14.py
2019_python/solutions/day15/: part1.py  part2.py  scratch.txt  test_day15.py
2019_python/solutions/day16/: part1.py  part2.py  test_day16.py
2019_python/solutions/day17/: part1.py  part2.py  scratch.txt
2019_python/solutions/day18/: input2.txt  part1.py  part2.py  test_day18.py
2019_python/solutions/day19/: part1.py  part2.py
2019_python/solutions/day2/: part1.py  part2.py
2019_python/solutions/day20/: part1.py  part2.py  test_day20.py
2019_python/solutions/day21/: part1.py  part2.py  test_day21.py
2019_python/solutions/day22/: Book1.xlsx  part1.py  part2.py  test_day22.py
2019_python/solutions/day23/: part1.py  part2.py
2019_python/solutions/day24/: part1.py
2019_python/solutions/day3/: part1.py  part2.py
2019_python/solutions/day4/: part1.py  part2.py
2019_python/solutions/day5/: part1.py  part2.py
2019_python/solutions/day6/: part1.py  part2.py
2019_python/solutions/day7/: part1.py  part2.py  test_day7.py
2019_python/solutions/day8/: part1.py  part2.py
2019_python/solutions/day9/: part1.py  part2.py  test_day9.py
2019_python/solutions/dayN/: part2.py
2019_python/solutions/shared/: intcode.py
2020_python/: pyproject.toml
2020_python/analytics/: analytics.py
2020_python/solutions/day1/: part1.py  part2.py
2020_python/solutions/day10/: part1.py  part2.py
2020_python/solutions/day11/: part1.py  part2.py
2020_python/solutions/day12/: part1.py  part2.py
2020_python/solutions/day13/: input  part1.py  part2.py
2020_python/solutions/day14/: part1.py  part2.py
2020_python/solutions/day15/: part1.py  part2.py
2020_python/solutions/day16/: part1.py  part2.py
2020_python/solutions/day17/: part1.py  part2.py  scratch.py
2020_python/solutions/day18/: part1.py  part2.py
2020_python/solutions/day19/: input2  part1.py  part2.py
2020_python/solutions/day2/: part1.py  part2.py
2020_python/solutions/day20/: part1.py  part2.py  sea_monster
2020_python/solutions/day21/: part1.py  part2.py
2020_python/solutions/day22/: part1.py  part2.py
2020_python/solutions/day23/: part1.py  part2.py
2020_python/solutions/day24/: part1.py  part2.py
2020_python/solutions/day25/: part1.py
2020_python/solutions/day3/: part1.py  part2.py
2020_python/solutions/day4/: part1.py  part2.py
2020_python/solutions/day5/: better.py  part1.py  part2.py
2020_python/solutions/day6/: part1.py  part2.py
2020_python/solutions/day7/: part1.py  part1_better.py  part2.py  part2_better.py
2020_python/solutions/day8/: part1.py  part2.py
2020_python/solutions/day9/: part1.py  part2.py
2020_python/solutions/dayN/: part1.py  part2.py
2021_python/: pyproject.toml
2021_python/analytics/: .gitignore  analytics.py
2021_python/solutions/: helpers.py
2021_python/solutions/day01/: part1.py  part2.py
2021_python/solutions/day02/: part1.py  part2.py
2021_python/solutions/day03/: part1.py  part2.py
2021_python/solutions/day04/: part1.py  part2.py
2021_python/solutions/day05/: part1.py  part2.py
2021_python/solutions/day06/: part1.py  part2.py
2021_python/solutions/day07/: part1.py  part2.py
2022_python/: downloader.py  pyproject.toml
2023_python/: downloader.py  pyproject.toml
(+176 files in other folders)
