[tool.poetry]
name = "2019_python"
version = "0.1.0"
description = ""
authors = ["Tyler Vick <vick.tyler@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.10"
numpy = "^1.17"
matplotlib = "^3.1"
pytest = "^5.3"
xxhash = "^1.4"
cython = "^0.29.14"
networkx = "^2.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
