[tool.poetry]
name = "2020_python"
version = "0.1.0"
description = ""
authors = ["Tyler Vick <vick.tyler@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "~1.17"
matplotlib = "^3.3.3"
pandas = "^1.1.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
