[tool.poetry]
name = "2021_python"
version = "0.1.0"
description = ""
authors = ["Tyler Vick <vick.tyler@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
numpy = "^1.21.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
