[tool.poetry]
name = "2023-python"
version = "0.1.0"
description = ""
authors = ["Tyler Vick <tyler.vick@leadingagile.com>"]
readme = "README.md"
packages = [{include = "2023_python"}]

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26.2"
scipy = "^1.11.4"
python-dotenv = "^1.0.0"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
